# fast_api_chat

./: pyproject.toml
app/application/api/: main.py
app/domain/entities/: messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
