[tool.poetry]
name = "fast-api-chat"
version = "0.1.0"
description = ""
authors = ["Amtilan <149930972+Amtilan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
motor = "^3.5.1"
django-dotenv = "^1.4.2"
uvicorn = {extras = ["all"], version = "^0.30.6"}
ipython = "^8.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
